2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: make updating work here in the same fashion
	as the disk list

2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: update the disks properly instead of just clearing
	the table on every update. Bug when removing an item though.
	I think it is a treeview bug

	* interface.c: set the update timer for the disk list

2001-11-12  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix bug correctly with respect to child
	processes and whether or not a process is a thread

2001-11-11  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: get " view active processes" working. Also
	fix a bug where child processes would not be shown if
	parents weren't

	* Makefile.am: remove a haack needed earlier to compile

	* procman.c: remove some unneeded stuff

2001-11-11  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: make renice dialog conform to new button
	ordering standards

2001-11-11  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: add extra columns like nice value, more
	memory values etc.

	* procdialogs.c: add the ability to custumize the columns
	in the prefs dialog

	* procman.c: check to see if settings exist for tree state

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: grab the focuse to the search entry when searching
	so that the tree doesn't grab focus

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	Merge from stable

	2001-10-27  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: change the search to start anew if no more
	strings are found. Fix bug #63132

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some string changes from stable

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>

	From stable:

	2001-10-25  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Pass the kill signal to the root password dialog
	so the proper action is taken as root. Also many minor cosmetic
	improvements.

2001-11-10  Kevin Vandersloot <kfv101@psu.edu>
